# FMY-Arcade

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Jenkinsfile  Makefile  README.md  main.cpp  output  test.txt
.github/: pull_request_template.md
.github/workflows/: deployment.yaml
assets/menu/img/: checkBox.ascii  middle.ascii  title.ascii
assets/nibbler/: tail.ascii
assets/nibbler/levels/: 1.ascii  2.ascii
assets/pacman/: ghost.ascii  map.ascii  pacman.ascii  point.ascii
assets/snake/: tail.ascii
common/: pull.sh
common/games/: IGameProvider.hpp
core/: CMakeLists.txt  main.cpp
core/src/: CMakeLists.txt  Core.cpp  Core.hpp
core/src/core/: CMakeLists.txt  Core.cpp  Core.hpp
core/src/exception/: ArcadeError.cpp  ArcadeError.hpp  CMakeLists.txt
core/src/loader/: CMakeLists.txt  DLLoader.cpp  DLLoader.hpp  Loader.cpp  Loader.hpp
core/src/menu/: CMakeLists.txt  Menu.cpp  Menu.hpp
core/src/menu/checkBox/: CMakeLists.txt  CheckBox.cpp  CheckBox.hpp
core/src/menu/entity/: CMakeLists.txt
core/src/menu/entity/text/: CMakeLists.txt  Text.cpp  Text.hpp
core/src/menu/entity/texture/: CMakeLists.txt  Texture.cpp  Texture.hpp
core/src/types/: CMakeLists.txt  Providers.hpp  Stages.hpp
core/src/utils/DLLoader/: CMakeLists.txt  DLLoader.cpp  DLLoader.hpp
games/: CMakeLists.txt
games/common/: CMakeLists.txt
games/common/components/: AComponent.cpp  AComponent.hpp  ADisplayableComponent.cpp  ADisplayableComponent.hpp  CollidableComponent.cpp  CollidableComponent.hpp  PositionComponent.cpp  PositionComponent.hpp  PositionableComponent.cpp  PositionableComponent.hpp  SoundComponent.cpp  SoundComponent.hpp  TextureComponent.cpp  TextureComponent.hpp
games/common/entity/: AEntity.cpp  AEntity.hpp
games/common/game/: AGame.cpp  AGame.hpp
games/nibbler/: CMakeLists.txt  export.cpp
games/nibbler/src/: NibblerGame.cpp  NibblerGame.hpp  NibblerGameProvider.cpp  NibblerGameProvider.hpp
games/nibbler/src/entities/apple/: AppleEntity.cpp  AppleEntity.hpp
games/nibbler/src/entities/background/: BackgroundEntity.cpp  BackgroundEntity.hpp
games/nibbler/src/entities/nibbler/: HeadEntity.cpp  HeadEntity.hpp  Nibbler.cpp  Nibbler.hpp  TailEntity.cpp  TailEntity.hpp
games/nibbler/src/entities/nibbler/components/: HeadKeyboardComponent.cpp  HeadKeyboardComponent.hpp
games/nibbler/src/entities/wall/: WallEntity.cpp  WallEntity.hpp
games/pacman/: CMakeLists.txt  export.cpp
games/pacman/src/: PacmanGame.cpp  PacmanGame.hpp  PacmanGameProvider.cpp  PacmanGameProvider.hpp
games/pacman/src/entities/apple/: AppleEntity.cpp  AppleEntity.hpp
games/pacman/src/entities/background/: BackgroundEntity.cpp  BackgroundEntity.hpp
games/pacman/src/entities/ghost/: GhostEntity.cpp  GhostEntity.hpp
games/pacman/src/entities/map/: MapEntity.cpp  MapEntity.hpp  PointEntity.cpp  PointEntity.hpp
games/pacman/src/entities/pacman/: HeadEntity.cpp  HeadEntity.hpp  Pacman.cpp  Pacman.hpp  TailEntity.cpp  TailEntity.hpp
games/pacman/src/entities/pacman/components/: HeadKeyboardComponent.cpp  HeadKeyboardComponent.hpp
games/pacman/src/entities/player/: PlayerEntity.cpp  PlayerEntity.hpp
games/pacman/src/entities/player/components/: HeadKeyboardComponent.cpp  HeadKeyboardComponent.hpp
games/pacman/src/entities/wall/: WallEntity.cpp  WallEntity.hpp
games/snake/: CMakeLists.txt  export.cpp
games/snake/src/: Snake.cpp  Snake.hpp  SnakeGame.cpp  SnakeGame.hpp  SnakeGameProvider.cpp  SnakeGameProvider.hpp  main.cpp
games/snake/src/entities/apple/: AppleEntity.cpp  AppleEntity.hpp
games/snake/src/entities/background/: BackgroundEntity.cpp  BackgroundEntity.hpp
games/snake/src/entities/snake/: HeadEntity.cpp  HeadEntity.hpp  Snake.cpp  Snake.hpp  TailEntity.cpp  TailEntity.hpp
games/snake/src/entities/snake/components/: HeadKeyboardComponent.cpp  HeadKeyboardComponent.hpp
games/snake/src/entities/wall/: WallEntity.cpp  WallEntity.hpp
graphics/: CMakeLists.txt
graphics/common/: CMakeLists.txt
graphics/common/events/: CMakeLists.txt
graphics/common/exceptions/: CMakeLists.txt  FontException.hpp  GraphicsException.cpp  SoundException.hpp  (+3 more)
graphics/ncurses/: CMakeLists.txt  export.cpp
graphics/ncurses/src/: GraphicsProvider.cpp  GraphicsProvider.hpp
graphics/ncurses/src/font/: Font.cpp  Font.hpp
graphics/ncurses/src/sound/: Sound.cpp  Sound.hpp
graphics/ncurses/src/texture/: Texture.cpp  Texture.hpp
graphics/ncurses/src/window/: EventsHandler.cpp  EventsHandler.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
graphics/sdl2/: CMakeLists.txt  export.cpp
graphics/sdl2/sdl/: CMakeLists.txt
graphics/sdl2/sdl/exception/: Exception.cpp  Exception.hpp
graphics/sdl2/sdl/initializer/: Initializer.cpp  Initializer.hpp
graphics/sdl2/sdl/renderer/: Renderer.cpp  Renderer.hpp
graphics/sdl2/sdl/sprite/: Sprite.cpp  Sprite.hpp
graphics/sdl2/sdl/surface/: Surface.cpp  Surface.hpp
graphics/sdl2/sdl/text/: Font.cpp  Font.hpp  Text.cpp  Text.hpp
graphics/sdl2/sdl/texture/: Texture.cpp  Texture.hpp
graphics/sdl2/sdl/types/: Color.hpp  Event.hpp  Rect.hpp
graphics/sdl2/sdl/window/: Window.cpp  Window.hpp
graphics/sdl2/src/: GraphicsProvider.cpp  GraphicsProvider.hpp
graphics/sdl2/src/font/: Font.cpp  Font.hpp
graphics/sdl2/src/sound/: Sound.cpp  Sound.hpp
graphics/sdl2/src/texture/: Texture.cpp  Texture.hpp
graphics/sdl2/src/types/: renderer.hpp  surface.hpp  window.hpp
graphics/sdl2/src/window/: EventsHandler.cpp  EventsHandler.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
graphics/sfml/: CMakeLists.txt  GraphicsProvider.cpp  GraphicsProvider.hpp  export.cpp
graphics/sfml/src/: GraphicsProvider.cpp  GraphicsProvider.hpp
graphics/sfml/src/font/: Font.cpp  Font.hpp
graphics/sfml/src/sound/: Sound.cpp  Sound.hpp
graphics/sfml/src/texture/: Texture.cpp  Texture.hpp
graphics/sfml/src/window/: EventsHandler.cpp  EventsHandler.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
shared/games/: IGame.hpp
shared/types/: Color.hpp
src/: CMakeLists.txt  main.cpp
utils/: compiler.hpp
(+16 files in other folders)
